--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
                         <h5>Total:</h5>
                      </div>
                      <div class="col-md-4 status">
-                        <h5>$1,278</h5>
-                        <h5>$0</h5>
-                        <h5>$1,278</h5>
+                        <h5>$ <span id="totalValue">1,278</span></h5>
+                        <h5>$ <span id="tax">0</span></h5>
+                        <h5>$ <span id="grandTotal">1,278</span> </h5>
                      </div>
                   </div>
                </div>
@@ -105,6 +105,28 @@
                productNewValue = productNewNumber * 59;
             }
             document.getElementById(product + "Value").innerText = productNewValue;
+
+            totalValue()
+         }
+
+         function totalValue() {
+            const phoneInputNumber = handleProductCount("phone");
+            const caseInputNumber = handleProductCount('case')
+
+            const total = phoneInputNumber * 1219 + caseInputNumber * 59;
+            document.getElementById("totalValue").innerText = total
+
+            const tax = Math.round(total * 0.1);
+            document.getElementById("tax").innerText = tax
+
+            const grandTotal = total + tax;
+            document.getElementById("grandTotal").innerText = grandTotal;  
+         }
+
+         function handleProductCount (product){
+            const productInput = document.getElementById(product + "-count");
+            const productInputNumber = parseInt(productInput.value);
+            return productInputNumber;
          }
 
          // function handleProductChange(isIncrease) {
